updated images and fixed mobile spacing

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -439,8 +439,7 @@ h6 {
 
     .custom-container4 .text {
         flex: 1; 
-        text-align: justify;
-        text-justify: inter-word;
+        text-align: left;
         word-spacing: normal;
     } 
 
